<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="API设置">

        <EditTextPreference
            app:key="net.devemperor.dictate.api_key"
            app:iconSpaceReserved="false"
            app:title="@string/dictate_settings_api_key_title" />

        <ListPreference
            app:defaultValue="openai"
            app:entries="@array/dictate_asr_providers"
            app:entryValues="@array/dictate_asr_providers_values"
            app:key="net.devemperor.dictate.asr_provider"
            app:iconSpaceReserved="false"
            app:title="@string/dictate_settings_asr_provider_title"
            app:summary="@string/dictate_settings_asr_provider_summary"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="whisper-1"
            app:entries="@array/dictate_asr_models"
            app:entryValues="@array/dictate_asr_models_values"
            app:key="net.devemperor.dictate.asr_model"
            app:iconSpaceReserved="false"
            app:title="@string/dictate_settings_asr_model_title"
            app:summary="@string/dictate_settings_asr_model_summary"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen> 